Correct HTML syntax and structure
Fix HTML structure and correct element attributes.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Valentine?</title>
+  <link rel="stylesheet"y>
+  <main class="card" aria-live="polite">
+    <header class="hero">
+      <img class="hero-img" src="assets/valentines.png" alt="Valentine image"my Valentine?</h1>
 
+    <div class="buttons" id="buttonsWrap">
+      <button id="yesBtn" class="btn yes">Yes</button>
+      <button id="noBtn" class="btn no">No</button>
+    </div>
+
+    <!-- Countdown (shows after enough "No") -->
+    <section id="countdownBox" class="countdown hidden">
+      <h2 id="countdownTitle">Countdown</h2>
+      <div class="timer" aria-label="Countdown timer">
+        <div class="unit"><span id="d">00</span><small id="dlbl">days</small></div>
+        <div class="unit"><span id="h">00</span><small id="hlbl">hours</small></div>
+        <div class="unit"><span id="m">00</span><small id="mlbl">minutes</small></div>
+        <div class="unit"><span id="s">00</span><small id="slbl">seconds</small></div>
+      </div>
+      <p class="sub" id="countdownNote">Bis bald </p>
+      <button id="resetBtn" class="btn ghost">Reset</button>
+    </section>
+
+    <!-- Yes result -->
+    <section id="result" class="result hidden">
+      <h2 id="yesTitle">yaaaayyyy</h2>
+      <p id="yesText">Freu ich mich.</p>
+      <button id="resetBtn2" class="btn ghost">Reset</button>
+    </section>
+  </main>
+
+  <script src="script</body>
+</html>
+``
