--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Valentine?</title>
-  <link rel="stylesheet"y>
+
+  <!-- Link to your stylesheet (style.css is at the repo root) -->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
   <main class="card" aria-live="polite">
     <header class="hero">
-      <img class="hero-img" src="assets/valentines.png" alt="Valentine image"my Valentine?</h1>
+      <img class="hero-img" src="assets/valentines.png" alt="Valentine image">
+      <h1>My Valentine?</h1>
+    </header>
 
     <div class="buttons" id="buttonsWrap">
       <button id="yesBtn" class="btn yes">Yes</button>
@@ -23,7 +29,7 @@
         <div class="unit"><span id="m">00</span><small id="mlbl">minutes</small></div>
         <div class="unit"><span id="s">00</span><small id="slbl">seconds</small></div>
       </div>
-      <p class="sub" id="countdownNote">Bis bald </p>
+      <p class="sub" id="countdownNote">Bis bald</p>
       <button id="resetBtn" class="btn ghost">Reset</button>
     </section>
 
@@ -35,6 +41,7 @@
     </section>
   </main>
 
-  <script src="script</body>
+  <!-- Reference your script file correctly -->
+  <script src="script.js"></script>
+</body>
 </html>
-``
