Update h1 element to include id="question"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="card" aria-live="polite">
     <header class="hero">
       <img class="hero-img" src="assets/valentines.png" alt="Valentine image">
-      <h1>My Valentine?</h1>
+      <h1 id="question">My Valentine?</h1>
     </header>
 
     <div class="buttons" id="buttonsWrap">
